--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,12 @@ $(function() {
 
 <div class='docheader'>Rx: Simple, Extensible Schemata</div>
 
+<ul>
+  <li><a href='#example'>Example</a></li>
+  <li><a href='#download'>Download and Use</a></li>
+  <li><a href='#hacking'>Hacking on Rx</a></li>
+</ul>
+
 <div class='secheader'>Why Rx?</div>
 
 <p>
@@ -51,6 +57,20 @@ $(function() {
   JSON-style data structures and is as easy to work with as JSON itself.
 </p>
 
+<div id='example' class='secheader'>Simple Example</div>
+
+<p>
+  This sample shows a schema to validate a simple data structure composed of a
+  map (a hash, dict, js Object, or the like) with at least four and maybe five
+  entries.  Each entry in the map has its own schema for validation, even
+  though some of the schemata are as simple as "must be a string."
+</p>
+
+<p>
+  You can see the example schema expressed in either YAML or JSON by clicking
+  the button.
+</p>
+
 <div class='sample'>
 <pre class='yaml'>
 ---
@@ -64,7 +84,7 @@ required:
   subj: { type: //str }
   body: { type: //str }
 optional:
-  user: { type: /pobox.com/account }
+  user: { type: /example.com/account }
 </pre>
 <pre class='json'>
 {
@@ -80,10 +100,39 @@ optional:
     "body": { "type": "//str" }
   },
   "optional": {
-    "user": { "type": "/pobox.com/account" }
+    "user": { "type": "/example.com/account" }
   }
 }
 </pre>
+</div>
+
+<div id='download' class='secheader'>Download and Use Rx</div>
+<p>
+  Right now, implementations of Rx have been written in Perl and JavaScript.
+  Since Rx itself is still undergoing design refinements, relying on either
+  implementation in production would be a bad idea.  You can find them an play
+  with them in <a href='http://git.codesimply.com/?p=Rx'>their git
+  repository</a>.
+</p>
+
+<div id='hacking' class='secheader'>Hacking on Rx</div>
+<p>
+  One of Rx's strengths is its simplicity.  It should be easy to implement in
+  any language into which JSON can be easily loaded, and one of its design
+  goals was to keep its core types simple to implement on any such language.
+  The core tests for proving the acceptability of an Rx implementation are
+  written in JSON, so new implementations need only write a loader and runner
+  for the test suite.
+</p>
+
+<p>
+  To have a look at the existing Rx code and test suite, check out <a
+  href='http://git.codesimply.com/?p=Rx'>its git repository</a>.
+</p>
+
+<div id='footer'>
+  <hr />
+  Rx, Copyright 2008, (code (simply))
 </div>
 
 </body>
