--- a/www/coretypes.html
+++ b/www/coretypes.html
@@ -3,7 +3,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Rx: Simple, Extensible Schemata - Core Types</title>
+  <title>Rx: Simple, Extensible Schemata</title>
   <link rel='stylesheet' href='rx.css' />
 </head>
 
@@ -21,93 +21,124 @@ $(function() {
 });
 </script>
 
-<div class='docheader'>Rx: Simple, Extensible Schemata</div>
+<div id='content'>
+<div id='header'><h1>Rx: Simple, Extensible Schemata</h1></div>
 
-<!--
-<ul>
-  <li><a href='#example'>Example</a></li>
-  <li><a href='#download'>Download and Use</a></li>
-  <li><a href='#hacking'>Hacking on Rx</a></li>
-</ul>
--->
+<div id='nav'>
+  <ul>
+    <li><a href='index.html'>About</a></li>
+    <li><a href='coretypes.html'>Core Types</a></li>
+    <li><a href='download.html'>Download</a></li>
+  </ul>
+</div>
 
-<div class='secheader'>Types and Schemata</div>
+<div id='main'>
+  <h2 id='glossary'>Types and Schemata</h2>
 
-<p>
-  There are really only two things you need to know about in Rx: types and
-  schemata.  A type is an abstract descripition of a type of data.  For
-  example, "an integer" or "an associative array" are data types.  When they're
-  made into concrete, checkable constraints, they become schemata.  This is
-  done by parameterizing them.
-</p>
+  <p>
+    There are really only two things you need to know about in Rx: types and
+    schemata.  A type is an abstract descripition of a type of data.  For
+    example, "an integer" or "an associative array" are data types.  When they're
+    made into concrete, checkable constraints, they become schemata.  This is
+    done by parameterizing them.
+  </p>
 
-<p>
-  A Rx type is identified by a string, its type name.  The type name is broken
-  down into two parts, the authority and the subname.  It's written like this:
-  <tt>/authority/subname</tt>
-</p>
+  <p>
+    A Rx type is identified by a string, its type name.  The type name is broken
+    down into two parts, the authority and the subname.  It's written like this:
+    <tt>/authority/subname</tt>
+  </p>
 
-<p>
-  While users can define their own custom types, quite a lot of data validation
-  rules can be expressed using the <em>core types</em> that come with a basic
-  implementation of Rx.  These types use the empty string as their authority,
-  which means that they look like this: <tt>//subname</tt>
-</p>
+  <p>
+    While users can define their own custom types, quite a lot of data validation
+    rules can be expressed using the <em>core types</em> that come with a basic
+    implementation of Rx.  These types use the empty string as their authority,
+    which means that they look like this: <tt>//subname</tt>
+  </p>
 
-<p>
-  This page gives a brief overview of the core types, which will be defined
-  in detail elsewhere, later.
-</p>
+  <p>
+    This page gives a brief overview of the core types, which will be defined
+    in detail elsewhere, later.
+  </p>
 
-<div id='scalartypes' class='secheader'>Simple Scalar Type</div>
+  <h2 id='single'>Single Types</h2>
 
-<p>
-  The basic scalar (one-value) types are:
-</p>
+  <p>
+    The basic scalar (one-value) types are:
+  </p>
 
-<dl>
-  <dt>//bool</dt>
-  <dd>a value that is either true or false</dd>
+  <table class='types'>
+    <tr>
+      <th>//bool</th><td>a value that is either true or false</td>
+    </tr>
 
-  <dt>//num</dt>
-  <dd>a number; may be parameterized by a range</dd>
+    <tr>
+      <th>//num</th><td>a number; may be parameterized by a range</td>
+    </tr>
 
-  <dt>//int</dt>
-  <dd>a integer; any number such that <tt>(x == floor(x))</tt>; may be
-  parameterized by range</dd>
+    <tr>
+      <th>//int</th>
+      <td>a integer; any number such that <tt>(x == floor(x))</tt>; may be
+    parameterized by range</td>
+    </tr>
 
-  <dt>//str</dt>
-  <dd>a string, even the empty string</dd>
+    <tr>
+      <th>//str</th>
+      <td>a string, even the empty string</td>
+    </tr>
 
-  <dt>//nil</dt>
-  <dd>the lack of a value (undef, null, nil, etc)</dd>
+    <tr>
+      <th>//nil</th>
+      <td>the lack of a value (undef, null, nil, etc)</td>
+    </tr>
 
-  <dt>//def</dt>
-  <dd>any defined value; anything that is not //nil</dd>
+    <tr>
+      <th>//def</th>
+      <td>any defined value; anything that is not //nil</td>
+    </tr>
 
-  <dt>//scalar</dt>
-  <dd>any single value (or //nil) -- anything but a collecting type</dd>
-</dl>
+    <tr>
+      <th>//scalar</th>
+      <td>any single value (or //nil) -- anything but a collecting type</td>
+    </tr>
+  </table>
 
-<p>
-  The basic collecting (many-value) types are:
-</p>
+  <h2 id='collect'>Collection Types</h2>
+  <p>
+    The basic collecting (many-value) types are:
+  </p>
 
-<dl>
-  <dt>//arr</dt>
-  <dd>a list of values all of one type; may be parameterized by length</dd>
+  <table class='types'>
+    <tr>
+    <th>//arr</th>
+    <td>a list of values all of one type; may be parameterized by length</td>
+    </tr>
 
-  <dt>//seq</dt>
-  <dd>a list of values all of varying types; each slot has a schema</dd>
+    <tr>
+    <th>//seq</th>
+    <td>a list of values all of varying types; each slot has a schema</td>
+    </tr>
 
-  <dt>//map</dt>
-  <dd>a mapping of string keys to values; parameterized by required and
-  optional keys, and how to treat unknown keys</dd>
-</dt>
+    <tr>
+    <th>//map</th>
+    <td>a mapping of string keys to values; parameterized by required and
+    optional keys, and how to treat unknown keys</td>
+    </tr>
+  </table>
+</div>
+
+<div id='sidebar'>
+  <p><a href='#glossary'>Terminology</a></p>
+  <p><a href='#single'>Single Types</a></p>
+  <p><a href='#collect'>Collection Types</a></p>
+</div>
 
 <div id='footer'>
-  <hr />
-  Rx, Copyright 2008, (code (simply))
+  <p>
+  Rx, Copyright 2008,
+  <span class="logo">(<span class='cons'>code</span> (<span
+  class='cdr'>simply</span><span style='font-size:.5em'> </span>))</span>
+  </p>
 </div>
 
 </body>
