--- a/www/src/demo.html
+++ b/www/src/demo.html
@@ -3,6 +3,14 @@
 <script lang='text/javascript' src='rx/coretypes.js'></script>
 
 <h2 id='demo'>Demonstration</h2>
+<p>
+  In this demo, you can define a schema (in JSON) and provide input data (in
+  JSON) and find out whether your schema is valid and whether the input data
+  validates against the schema.  Note that because JSON must be an array or
+  object, you can't validate things against a bare <tt>//int</tt> schema (for
+  example).
+</p>
+
 <p id='status' class='neutral'>(status indicator)</p>
 <table id='demoInputs'>
   <tr>
