--- a/www/src/coretypes.html
+++ b/www/src/coretypes.html
@@ -85,7 +85,7 @@
   </tr>
 
   <tr>
-  <th>//map</th>
+  <th>//rec</th>
   <td>a mapping of string keys to values; parameterized by required and
   optional keys, and how to treat unknown keys</td>
   </tr>
