--- a/www/src/demo.html
+++ b/www/src/demo.html
@@ -18,7 +18,7 @@
 <textarea id='jsonSchema' rows='14' cols='35'>
 
 {
- "type": "//map",
+ "type": "//rec",
  "required": { "foo": "//int" },
  "optional": {
    "bar": {
