--- a/www/src/index.html
+++ b/www/src/index.html
@@ -32,7 +32,7 @@
 <div class='sample'>
 <pre class='yaml'>
 ---
-type: //map
+type: //rec
 required:
   from: { type: //str }
   to  : 
@@ -45,7 +45,7 @@ optional:
   user: { type: /example.com/account }</pre>
 <pre class='json'>
 {
-  "type": "//map",
+  "type": "//rec",
   "required": {
     "from": { "type": "//str" },
     "to"  : {
