--- a/www/src/coretypes.html
+++ b/www/src/coretypes.html
@@ -63,8 +63,8 @@
   </tr>
 
   <tr>
-    <th>//scalar</th>
-    <td>any single value (or //nil) -- anything but a collecting type</td>
+    <th>//one</th>
+    <td>any single value -- anything //def that is not a collection</td>
   </tr>
 </table>
 
