--- a/www/src/index.html
+++ b/www/src/index.html
@@ -76,11 +76,11 @@ optional:
 
 <h2 id='using'>Using Rx</h2>
 <p>
-  Right now, implementations of Rx have been written in Perl and JavaScript.
-  Since Rx itself is still undergoing design refinements, relying on either
-  implementation in production would be a bad idea.  You can find them an
-  play with them in <a href='http://git.codesimply.com/?p=Rx'>their git
-  repository</a>.
+  Right now, implementations of Rx have been written in Perl, JavaScript,
+  Python, and PHP.  Since Rx itself is still undergoing design refinements,
+  relying on either implementation in production would be a bad idea.  You can
+  find them an play with them in <a
+  href='http://git.codesimply.com/?p=Rx'>their git repository</a>.
 </p>
 
 <h2 id='hacking'>Hacking on Rx</h2>
