--- a/www/src/index.html
+++ b/www/src/index.html
@@ -76,7 +76,7 @@ optional:
 
 <h2 id='using'>Using Rx</h2>
 <p>
-  Right now, implementations of Rx have been written in Perl, JavaScript,
+  Right now, implementations of Rx have been written in Perl, JavaScript, Ruby,
   Python, and PHP.  Since Rx itself is still undergoing design refinements,
   relying on either implementation in production would be a bad idea.  You can
   find them an play with them in <a
