--- a/www/src/coretypes.html
+++ b/www/src/coretypes.html
@@ -94,3 +94,21 @@
     <td>a map of names to values, with all the values matching one schema</td>
   </tr>
 </table>
+
+<h2 id='combo'>Combination Types</h2>
+
+<p>
+  The basic combination types are:
+</p>
+
+<table class='types'>
+  <tr>
+    <th>//any</th>
+    <td>either anything at all, or any of a given list of schematas</td>
+  </tr>
+
+  <tr>
+    <th>//all</th>
+    <td>a list of schemata; checked data must validate against them all</td>
+  </tr>
+</table>
