more info on download page

--- a/www/src/download.html
+++ b/www/src/download.html
@@ -5,3 +5,14 @@
   copy of the current working code from <a
   href='http://git.codesimply.com/?p=Rx'>the git repository</a>.
 </p>
+
+<p>
+  This includes the specification test data as well as implementations in:
+  <ul>
+    <li>JavaScript</li>
+    <li>Perl</li>
+    <li>PHP</li>
+    <li>Python</li>
+    <li>Ruby</li>
+  </ul>
+</p>
