--- a/www/src/moretypes.html
+++ b/www/src/moretypes.html
@@ -24,7 +24,7 @@
   Rx core types can be used to validate core type schema definitions.  In other
   words, it is possible to write a schema that validates the input used to
   build a schema for any core Rx type.  These schemata live under
-  <tt>tag:codesimply.com,2008:rx/.meta</tt>, though implementations are not
+  <tt>tag:codesimply.com,2008:rx/meta/</tt>, though implementations are not
   required to implement them.  Their definitions are given on the <a
   href='{{$root}}coretypes.html'>core type</a> pages for each type.
 </p>
