--- a/www/src/coretypes.html
+++ b/www/src/coretypes.html
@@ -32,8 +32,8 @@ $(function() {
 </p>
 
 <table>
-  <tr><td>rubric</td><td>tag:codesimply.com,2008:rubric/</td></tr>
-  <tr><td>x</td>     <td>http://example.com/x-ample/</td></tr>
+  <tr><td class='prefix'>rubric</td><td>tag:codesimply.com,2008:rubric/</td></tr>
+  <tr><td class='prefix'>x</td>     <td>http://example.com/x-ample/</td></tr>
 </table>
 
 <p>
@@ -47,7 +47,7 @@ $(function() {
 </p>
 
 <table>
-  <tr><td>(empty)</td><td>tag:codesimply.com,2008:rx/core/</td></tr>
+  <tr><td class='prefix'>(empty)</td><td>tag:codesimply.com,2008:rx/core/</td></tr>
 </table>
 
 <p>
@@ -63,8 +63,8 @@ $(function() {
 </p>
 
 <table>
-  <tr><td>.rx</td>  <td>tag:codesimply.com,2008:rx/</td></tr>
-  <tr><td>.meta</td><td>tag:codesimply.com,2008:rx/meta/</td></tr>
+  <tr><td class='prefix'>.rx</td>  <td>tag:codesimply.com,2008:rx/</td></tr>
+  <tr><td class='prefix'>.meta</td><td>tag:codesimply.com,2008:rx/meta/</td></tr>
 </table>
 
 <p>
