nicer question text

--- a/www/src/faq.html
+++ b/www/src/faq.html
@@ -1,6 +1,6 @@
 <h1>Frequently Anticipated Questions</h1>
 
-<h2 id='data-not-strs'>Only JSON?</h2>
+<h2 id='data-not-strs'>Only for JSON?</h2>
 <p>
   Rx isn't only for JSON.  It's just that JSON is a very good least common
   denomenator for common datatypes, and using JSON for the reference tests
