mailing list link

--- a/www/src/index.html
+++ b/www/src/index.html
@@ -97,3 +97,8 @@ optional:
   To have a look at the existing Rx code and test suite, check out <a
   href='http://git.codesimply.com/?p=Rx'>its git repository</a>.
 </p>
+
+<p>
+  <a href='https://www.listbox.com/subscribe/?list_id=137345'>Join the mailing
+  list.</a>
+</p>
