--- a/www/src/faq.html
+++ b/www/src/faq.html
@@ -42,7 +42,7 @@
   platforms.  Its implementation of "mapping merging" requires references,
   which are not a feature of JSON, and no system for emulating them in JSON is
   given.  This means that a Kwalify schema might not be representable in JSON,
-  which is a shame, since JSON is far more widely-implemented than JSON.  Its
+  which is a shame, since JSON is far more widely-implemented than YAML.  Its
   Ruby implementation includes its own YAML parser, which doesn't conform to
   current YAML specs.  There are other problems, too.
 </p>
