--- a/www/src/coretype/arr.html
+++ b/www/src/coretype/arr.html
@@ -8,7 +8,7 @@
 <div class='sample'>
   <p>Matches three or more integers:</p>
   <pre class='json'>{
-    "type": "//any",
+    "type": "//arr",
     "contents": "//int",
     "length": { "min": 3 }
 }</pre>
