--- a/www/src/index.html
+++ b/www/src/index.html
@@ -80,7 +80,7 @@ optional:
   Python, and PHP.  Since Rx itself is still undergoing design refinements,
   relying on either implementation in production would be a bad idea.  You can
   find them an play with them in <a
-  href='http://git.codesimply.com/?p=Rx'>their git repository</a>.
+  href='http://git.codesimply.com/?p=Rx.git'>their git repository</a>.
 </p>
 
 <h2 id='hacking'>Hacking on Rx</h2>
