--- a/www/src/download.html
+++ b/www/src/download.html
@@ -3,7 +3,7 @@
 <p>
   There is not yet an official release of any part of Rx, but you can get a
   copy of the current working code from <a
-  href='http://git.codesimply.com/?p=Rx.git'>the git repository</a>.
+  href='http://github.com/rjbs/rx'>the git repository</a>.
 </p>
 
 <p>
