--- a/www/src/index.html
+++ b/www/src/index.html
@@ -80,7 +80,7 @@ optional:
   Python, and PHP.  Since Rx itself is still undergoing design refinements,
   relying on either implementation in production would be a bad idea.  You can
   find them an play with them in <a
-  href='http://git.codesimply.com/?p=Rx.git'>their git repository</a>.
+  href='http://github.com/rjbs/rx'>their git repository</a>.
 </p>
 
 <h2 id='hacking'>Hacking on Rx</h2>
@@ -95,7 +95,7 @@ optional:
 
 <p>
   To have a look at the existing Rx code and test suite, check out <a
-  href='http://git.codesimply.com/?p=Rx'>its git repository</a>.
+  href='http://github.com/rjbs/rx'>its git repository</a>.
 </p>
 
 <p>
