--- a/www/src/index.html
+++ b/www/src/index.html
@@ -78,7 +78,7 @@ optional:
 <p>
   Right now, implementations of Rx have been written in Perl, JavaScript, Ruby,
   Python, and PHP.  Since Rx itself is still undergoing design refinements,
-  relying on either implementation in production would be a bad idea.  You can
+  relying on any implementation in production would be a bad idea.  You can
   find them an play with them in <a
   href='http://github.com/rjbs/rx'>their git repository</a>.
 </p>
