--- a/www/src/coretype/map.html
+++ b/www/src/coretype/map.html
@@ -14,7 +14,7 @@
   <p>/.meta/map, the schema for //map definitions:</p>
   <pre class='json'>{
   "type": "//map",
-  "required":
+  "required": {
     "type":   { "type": "//str", "value": "//map" },
     "values": { "type": "//map", "values": "/.meta/schema" }
   }
