excise JSON::XS

--- a/www/src/faq.html
+++ b/www/src/faq.html
@@ -13,8 +13,8 @@
   them.  It doesn't know about JSON, YAML, XML, or any other way to serialize
   or exchange data.  There are a few unfortunate exceptions, though.  For
   example, because Perl has no native boolean type, it relies on encountering
-  the kind of object that a JSON::XS deserializer would create.  These
-  exceptions are always about language constraints, and never about Rx itself.
+  the kind of object that a JSON deserializer would create.  These exceptions
+  are always about language constraints, and never about Rx itself.
 </p>
 
 <p>
