Fix typos in definition for //str on website
Affects recently added paragraph about the value parameter.

--- a/www/src/coretype/str.html
+++ b/www/src/coretype/str.html
@@ -6,7 +6,7 @@
 
 <p>
   The optional <tt>value</tt> parameter may provide an exact value to be
-  compared againt.  If this paramter is given, the schema will only accept
+  compared against.  If this parameter is given, the schema will only accept
   a string that is equal to the parameter's value.
 </p>
 
