--- a/www/src/faq.html
+++ b/www/src/faq.html
@@ -3,7 +3,7 @@
 <h2 id='data-not-strs'>Only for JSON?</h2>
 <p>
   Rx isn't only for JSON.  It's just that JSON is a very good least common
-  denomenator for common datatypes, and using JSON for the reference tests
+  denominator for common datatypes, and using JSON for the reference tests
   makes it very easy to implement elsewhere -- there are JSON implementations
   nearly oheverywhere.
 </p>
