--- a/www/src/index.html
+++ b/www/src/index.html
@@ -79,7 +79,7 @@ optional:
   Right now, implementations of Rx have been written in Perl, JavaScript, Ruby,
   Python, and PHP.  Since Rx itself is still undergoing design refinements,
   relying on any implementation in production would be a bad idea.  You can
-  find them an play with them in <a
+  find them and play with them in <a
   href='http://github.com/rjbs/rx'>their git repository</a>.
 </p>
 
