remove an extra / in /.meta/range

--- a/www/src/coretype/str.html
+++ b/www/src/coretype/str.html
@@ -27,7 +27,7 @@
   },
   "optional": {
     "value": { "type": "//str" },
-    "length": { "type": "/.meta//range" }
+    "length": { "type": "/.meta/range" }
   }
 }</pre>
 </div>
