note that //str is parameterized over length

--- a/www/src/coretypes.html
+++ b/www/src/coretypes.html
@@ -100,12 +100,13 @@ $(function() {
   <tr>
     <th>//int</th>
     <td>an integer; any number such that <tt>(x == floor(x))</tt>; may be
-  parameterized by a range</td>
+    parameterized by a range</td>
   </tr>
 
   <tr>
     <th>//str</th>
-    <td>a string, even the empty string</td>
+    <td>a string, even the empty string; may require a specific string or be
+    parameterized by length range</td>
   </tr>
 
   <tr>
