stop acting like this is getting lots of dev

--- a/www/src/index.html
+++ b/www/src/index.html
@@ -77,9 +77,7 @@ optional:
 <h2 id='using'>Using Rx</h2>
 <p>
   Right now, implementations of Rx have been written in Perl, JavaScript, Ruby,
-  Python, and PHP.  Since Rx itself is still undergoing design refinements,
-  relying on any implementation in production would be a bad idea.  You can
-  find them and play with them in <a
+  Python, and PHP.  You can find them and play with them in <a
   href='http://github.com/rjbs/rx'>their git repository</a>.
 </p>
 
